--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=18 <23"
+  },
   "type": "module",
   "dependencies": {
     "ejs": "^3.1.10",
